<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_conn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_session_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ImageView
            android:id="@+id/image_conn_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connected"
            android:layout_marginRight="@dimen/margin_std"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/conn_status"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/conn_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_connected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_conn_status"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_session_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_conn_status"
        app:layout_constraintBottom_toTopOf="@+id/reconnect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/session_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_id"
            android:layout_marginRight="@dimen/margin_std"
            app:layout_constraintBaseline_toBaselineOf="@+id/session_id_edit"
            app:layout_constraintRight_toLeftOf="@+id/session_id_edit" />

        <EditText
            android:id="@+id/session_id_edit"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:editable="false"
            android:textIsSelectable="true"
            android:layout_marginBottom="@dimen/margin_std"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/password_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginRight="@dimen/margin_std"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_edit"
            app:layout_constraintRight_toLeftOf="@+id/password_edit" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:editable="false"
            android:textIsSelectable="true"
            app:layout_constraintTop_toBottomOf="@+id/session_id_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_std"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/reconnect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/reconnect"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/layout_session_data"
        app:layout_constraintBottom_toTopOf="@+id/disconnect_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/disconnect_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_exit"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="@dimen/margin_std"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>